// Vitest Snapshot v1

exports[`error to object/json 1`] = `
{
  "args": [
    "http://www.skarab42.dev",
    {
      "isAdmin": true,
      "name": "skarab42",
    },
  ],
  "cause": undefined,
  "data": {
    "message": "Page Not Found: http://www.skarab42.dev",
    "request": {
      "url": "http://www.skarab42.dev",
      "user": {
        "isAdmin": true,
        "name": "skarab42",
      },
    },
  },
  "stack": StringMatching /\\^PojoError: Page Not Found: http:\\\\/\\\\/www\\\\\\.skarab42\\\\\\.dev/,
  "type": "PAGE_NOT_FOUND",
}
`;

exports[`error with cause to object 1`] = `
{
  "args": [
    "www",
  ],
  "cause": {
    "args": [],
    "cause": {
      "args": [],
      "cause": undefined,
      "data": {
        "message": "Unknown error...",
      },
      "stack": StringMatching /\\^PojoError: Unknown error/,
      "type": "UNKNOWN",
    },
    "data": {
      "message": "Fatal error",
    },
    "stack": StringMatching /\\^PojoError: Fatal error/,
    "type": "FATAL",
  },
  "data": {
    "message": "Page Not Found: www",
    "request": {
      "url": "www",
      "user": undefined,
    },
  },
  "stack": StringMatching /\\^PojoError: Page Not Found/,
  "type": "PAGE_NOT_FOUND",
}
`;

exports[`error with two parameter (url, undefined) 1`] = `
{
  "message": "Page Not Found: http://www.skarab42.dev",
  "request": {
    "url": "http://www.skarab42.dev",
    "user": undefined,
  },
}
`;

exports[`error with two parameters (url, user) 1`] = `
{
  "message": "Page Not Found: http://www.skarab42.dev",
  "request": {
    "url": "http://www.skarab42.dev",
    "user": {
      "isAdmin": true,
      "name": "skarab42",
    },
  },
}
`;
